--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project: Recipes</title>
+  <title>Project: Recipes | The Odin Project</title>
 </head>
 <body>
   <h1>Odin Recipes</h1>
+  <a href="recipes/swedish-meatballs-svenska-kottbullar.html">Swedish Meathballs</a>
+  <a href="recipes/hasselback-potatoes.html">Hasselback Potatoes</a>
+  <a href="recipes/janssons-temptation-janssons-frestelse.html">Janssons Frastelse</a>
+  <a href="recipes/authentic-swedish-pancakes.html">Swedish Pancakes</a>
+  <a href="recipes/swedish-sticky-chocolate-cake-kladdkaka.html">Kladdkaka</a>
+
 </body>
 </html>
