feat: complete recipe & delete redundant recipes
finish recipe for janssons & remove 2 recipes that's not needed

--- a/recipes/janssons-temptation-janssons-frestelse.html
+++ b/recipes/janssons-temptation-janssons-frestelse.html
@@ -7,6 +7,25 @@
 </head>
 <body>
   <h1>Jansson's Temptation (Janssons Frestelse)</h1>
+    <a href="../index.html">Back</a><br>
+    <img src="https://www.allrecipes.com/thmb/O52ACijDHfWa-lWo5TigIkI7Ff0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/808816-26f20bc514944e7bad1dbfde8067bf42.jpg" width="550" alt="picture of a beautifully laid out piece of janssons with a red background">
+  <h2>Description</h2>
+    <p>Who Jansson is, we may never know, but this meal is an absolute must on a cold and frigid evening. You might be put off by the inclusion of anchovies, but you will be really surprised at how well the saltiness of the fish works in this dish. If the anchovies are a definite 'no', then substitute smoked salmon. It won't have the same saltiness in each bite, but the salmon can be just as delicious in its own right. This is the one recipe that I get requests for after parties and there is always an amusing display of disbelief afterwards when the inclusion of anchovies is revealed.</p>
+  <h2>Ingredients</h2>
+    <ul>
+      <li>2 large onions, cut into 1/4 inch wide strips</li>
+      <li>14 fillets Swedish anchovies, or regular anchovies</li>
+      <li>6 potatoes, peeled and cut into strips</li>
+      <li>1 ½ cups heavy cream</li>
+      <li>2 tablespoons dry bread crumbs</li>
+      <li>1 tablespoon melted butter</li>
+    </ul>
+  <h2>Steps</h2>
+    <ol>
+      <li>Preheat oven to 425 degrees F (220 degrees C). Butter a 9x13 inch baking dish.</li><br>
+      <li>Spread onions evenly onto the bottom of the prepared baking dish. Evenly distribute anchovies on top of the onions. Place potatoes on top of the anchovies, then pour in heavy cream. Mix bread crumbs together with the melted butter, then sprinkle overtop of the potatoes.</li><br>
+      <li>Place onto a baking sheet to catch any cream which bubbles over. Bake in preheated oven until the potatoes have softened, the cream has reduced, and the dish has turned deep golden brown, about 45 minutes.</li>
+    </ol>
 </body>
 </html> 
 
