--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/swedish-meatballs-svenska-kottbullar.html">Swedish Meathballs</a>
-  <a href="recipes/janssons-temptation-janssons-frestelse.html">Janssons Frastelse</a>
-  <a href="recipes/swedish-sticky-chocolate-cake-kladdkaka.html">Kladdkaka</a>
-
+  <ul>
+    <li><a href="recipes/swedish-meatballs-svenska-kottbullar.html">Swedish Meathballs</a></li>
+    <li><a href="recipes/janssons-temptation-janssons-frestelse.html">Janssons Frastelse</a></li>
+    <li><a href="recipes/swedish-sticky-chocolate-cake-kladdkaka.html">Kladdkaka</a></li>
+  </ul>
 </body>
 </html>
