--- a/recipes/swedish-sticky-chocolate-cake-kladdkaka.html
+++ b/recipes/swedish-sticky-chocolate-cake-kladdkaka.html
@@ -7,7 +7,26 @@
 </head>
 <body>
   <h1>Swedish Sticky Chocolate Cake (Kladdkaka)</h1>
+    <a href="../index.html">Back</a><br>
+    <img src="https://www.allrecipes.com/thmb/x-_AwK-692no2Yx_2bDzxm1JCc4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/346729-dd4ec22c120b4a38b9ec7120d7723ef1.jpg" width="550" alt="picture of a delicious looking chocolate cake with a generous amount of whipped cream served a white plate with blue and white checkered tablecloth background">
+  <h2>Description</h2>
+    <p>This is a Swedish recipe for Kladdkaka (Sticky Chocolate Cake), a rich, and gooey chocolate cake. It should serve 8 but at our house it often serves only 2...</p>
+  <h2>Ingredients</h2>
+    <ul>
+      <li>½ cup all-purpose flour</li>
+      <li>¼ cup unsweetened cocoa powder</li>
+      <li>1 pinch salt</li>
+      <li>2 eggs</li>
+      <li>1 ⅓ cups white sugar</li>
+      <li>1 tablespoon vanilla extract</li>
+      <li>½ cup butter, melted</li>
+    </ul>
+  <h2>Steps</h2>
+    <ol>
+      <li>Preheat oven to 300 degrees F (150 degrees C). Lightly grease an 8-inch pie plate.</li><br>
+      <li>Sift together the flour, cocoa powder, and salt; set aside. Stir the eggs into the sugar until smooth. Add the flour mixture, and stir just until combined. Pour in the vanilla extract and butter; stir until well combined. Pour into prepared pie plate.</li><br>
+      <li>Bake on the lower rack of the preheated oven for 35 minutes, or until the center has slightly set. Allow cake to cool for 1 hour in the pie plate. Serve warm, or refrigerate overnight and serve cold.</li>
+    </ol>
 </body>
 </html> 
-
 <!-- https://www.allrecipes.com/recipe/75135/swedish-sticky-chocolate-cake-kladdkaka/ -->
