fix: add styles.css, css to index.html, img folder
download images and change href to local instead of https
add css to index.html for better look and styles.css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project: Recipes | The Odin Project</title>
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  <ul>
-    <li><a href="recipes/swedish-meatballs-svenska-kottbullar.html">Swedish Meathballs</a></li>
-    <li><a href="recipes/janssons-temptation-janssons-frestelse.html">Janssons Frastelse</a></li>
-    <li><a href="recipes/swedish-sticky-chocolate-cake-kladdkaka.html">Kladdkaka</a></li>
+  <h1 class="heading">Odin Recipes</h1>
+  <div class="content">
+    <div class="item">
+      <a href="recipes/swedish-meatballs-svenska-kottbullar.html"><img src="img/meatballs.webp"></a>
+      <p>Swedish Meatballs</p>
+    </div>
+    <div class="item">
+      <a href="recipes/janssons-temptation-janssons-frestelse.html"><img src="img/janssons.webp"></a>
+      <p>Janssons Frästelse</p>
+    </div>
+
+    <div class="item">
+      <a href="recipes/swedish-sticky-chocolate-cake-kladdkaka.html"><img src="img/kladdkaka.webp"></a>
+      <p>Kladdkaka</p>
+    </div>
+  </div>
   </ul>
 </body>
 </html>
