--- a/recipes/swedish-meatballs-svenska-kottbullar.html
+++ b/recipes/swedish-meatballs-svenska-kottbullar.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>Swedish Meatballs (Svenska Kottbullar)</h1>
-    <a href="../index.html">Back</a><br>
-    <img src="https://www.allrecipes.com/thmb/lYWnWn-oP3dW1toplbQJ49U1ZpA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/216564-swedish-meatballs-svenska-kottbullar-DDMFS-4x3-2cfaeac162c9485dbd7d632fd0b6ef0a.jpg" width="550" alt="picture of an oven dish full of meatballs in a creamy brown sauce">
+    <a href="/index.html">Back</a><br>
+    <img src="/img/meatballs.webp" width="550" alt="picture of an oven dish full of meatballs in a creamy brown sauce">
   <h2>Description</h2>
     <p>This Swedish meatball recipe is our family's Christmas tradition. We frequently double the recipe and keep it warm in a slow cooker. Worth the effort, and the meatballs are even better the next day! Reserve brown gravy and add sour cream to it the day you serve the leftovers.</p>
   <h2>Ingredients</h2>
