--- a/recipes/swedish-sticky-chocolate-cake-kladdkaka.html
+++ b/recipes/swedish-sticky-chocolate-cake-kladdkaka.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swedish Sticky Chocolate Cake (Kladdkaka)</title>
+  <link href="styles.css" rel="stylesheet">
 </head>
+
+
 <body>
   <h1>Swedish Sticky Chocolate Cake (Kladdkaka)</h1>
-    <a href="../index.html">Back</a><br>
-    <img src="https://www.allrecipes.com/thmb/x-_AwK-692no2Yx_2bDzxm1JCc4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/346729-dd4ec22c120b4a38b9ec7120d7723ef1.jpg" width="550" alt="picture of a delicious looking chocolate cake with a generous amount of whipped cream served a white plate with blue and white checkered tablecloth background">
+    <a href="/index.html">Back</a><br>
+    <img src="/img/kladdkaka.webp" width="550" alt="picture of a delicious looking chocolate cake with a generous amount of whipped cream served a white plate with blue and white checkered tablecloth background">
   <h2>Description</h2>
     <p>This is a Swedish recipe for Kladdkaka (Sticky Chocolate Cake), a rich, and gooey chocolate cake. It should serve 8 but at our house it often serves only 2...</p>
   <h2>Ingredients</h2>
