--- a/recipes/janssons-temptation-janssons-frestelse.html
+++ b/recipes/janssons-temptation-janssons-frestelse.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>Jansson's Temptation (Janssons Frestelse)</h1>
-    <a href="../index.html">Back</a><br>
-    <img src="https://www.allrecipes.com/thmb/O52ACijDHfWa-lWo5TigIkI7Ff0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/808816-26f20bc514944e7bad1dbfde8067bf42.jpg" width="550" alt="picture of a beautifully laid out piece of janssons with a red background">
+    <a href="/index.html">Back</a><br>
+    <img src="/img/janssons.webp" width="550" alt="picture of a beautifully laid out piece of janssons with a red background">
   <h2>Description</h2>
     <p>Who Jansson is, we may never know, but this meal is an absolute must on a cold and frigid evening. You might be put off by the inclusion of anchovies, but you will be really surprised at how well the saltiness of the fish works in this dish. If the anchovies are a definite 'no', then substitute smoked salmon. It won't have the same saltiness in each bite, but the salmon can be just as delicious in its own right. This is the one recipe that I get requests for after parties and there is always an amusing display of disbelief afterwards when the inclusion of anchovies is revealed.</p>
   <h2>Ingredients</h2>
