feat: add alt text to images

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <h1 class="heading">Odin Recipes</h1>
   <div class="content">
     <div class="item">
-      <a href="recipes/swedish-meatballs-svenska-kottbullar.html"><img src="img/meatballs.webp"></a>
+      <a href="recipes/swedish-meatballs-svenska-kottbullar.html"><img src="img/meatballs.webp" alt="picture of an oven dish full of meatballs in a creamy brown sauce"></a>
       <p>Swedish Meatballs</p>
     </div>
     <div class="item">
-      <a href="recipes/janssons-temptation-janssons-frestelse.html"><img src="img/janssons.webp"></a>
+      <a href="recipes/janssons-temptation-janssons-frestelse.html"><img src="img/janssons.webp" alt="picture of a beautifully laid out piece of janssons with a red background"></a>
       <p>Janssons Frästelse</p>
     </div>
 
     <div class="item">
-      <a href="recipes/swedish-sticky-chocolate-cake-kladdkaka.html"><img src="img/kladdkaka.webp"></a>
+      <a href="recipes/swedish-sticky-chocolate-cake-kladdkaka.html"><img src="img/kladdkaka.webp" alt="picture of a delicious looking chocolate cake with a generous amount of whipped cream served a white plate with blue and white checkered tablecloth background"></a>
       <p>Kladdkaka</p>
     </div>
   </div>
